[package]
name = "rebellion"
version = "0.1.0"
authors = ["Daniel Parnell <me@danielparnell.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sha2 = "0.10.6"
base64 = "0.13.1"
ureq = { version = "2.5.0", features = ["json"]}
clap = { version = "4.0.23", features = ["derive", "env"]}
md5-rs = "0.1.5"
serde = "*"
serde_derive = "*"
ml-progress = "0.1.0"